<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_menu_priority"
        android:title="@string/sort_by"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/menu_home_sort_high"
                android:title="@string/priority_high" />
            <item
                android:id="@+id/menu_home_sort_low"
                android:title="@string/priority_low" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_home_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />


</menu>